src/test/deca/syntax/parser/invalid/multi_line_string_without_class.deca
// Parser test, can't write one string on two lines

{
  " I am just a simple
  multi line string"
}

//# output
